<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/slideMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="bottom"
    android:padding="10dp"
    android:fitsSystemWindows="true"
    android:background="@color/header_gradient_end">

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="60dp"
        app:cardElevation="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/account_svgrepo_com"
            android:contentDescription="@string/profile_image_desc" />
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/user_name_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/text_secondary" />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_user_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bio_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio_label"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/text_secondary" />
        <TextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_bio"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
